--- a/Examples/Blinky/Blinky.cproject.yml
+++ b/Examples/Blinky/Blinky.cproject.yml
@@ -41,3 +41,10 @@ project:
     - script:  ./RTE/Device/STM32F407VGTx/ac6_linker_script.sct.src
       regions: ./RTE/Device/STM32F407VGTx/regions_STM32F407G-DISC1.h
       for-compiler: AC6
+
+  # List executable file formats to be generated.
+  output:
+    type:
+      - elf
+      - hex
+      - map
